tests/errors/syntax_err04.v
module a;
wire [3]x;
endmodule

